--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ dev = [
     "isort>=5.11.5",
     "ruff>=0.0.253",
     "pyflakes>=3.0.1",
+    "faker>=17.6.0",
 ]
 
 [project]
@@ -15,7 +16,9 @@ description = "A Pytest plugin that shows a running tally of test suite stats in
 authors = [
     {name = "Jeffrey Wright", email = "jeff.washcloth@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "rich>=13.3.1",
+]
 requires-python = ">=3.7"
 readme = "README.md"
 license = {text = "MIT"}
